# qiskit-addon-dice-solver

./: .gitignore  .mypy.ini  .pylintrc  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.sh  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml
.github/workflows/: README.md  citation.yml  docs.yml  lint.yml
docs/: conf.py  index.rst
docs/apidocs/: qiskit_addon_dice_solver.rst
qiskit_addon_dice_solver/: __init__.py  dice_solver.py  experimental.py
releasenotes/notes/: bigdets-ab774bbfc91ff01d.yaml  dont-flip-b993f16f04d96303.yaml  maxiter-a43cc45a74c04210.yaml  open-shell-7ce25a8ae730f144.yaml  remove-solve-dice-469761d8d75c0660.yaml  sci-state-2e80dcf3458f30dd.yaml  select-cutoff-2d6ba019df7dbf2c.yaml  solve-hci-370360b1472fe000.yaml
releasenotes/notes/0.2/: open-shell-7ce25a8ae730f144.yaml  remove-solve-dice-5dc2e27406f207bf.yaml  solve-fermion-b55bf481db6a2a51.yaml
releasenotes/notes/0.3/: ci-strs-2ae9b9a5f4a2961b.yaml  select-cutoff-2d6ba019df7dbf2c.yaml
src/: lib.rs
test/: README.md  test_dice_outfile_reader.py  test_n2.py
