[package]
name = "qiskit_addon_dice_solver_accelerate"
version = "0.0.0"
edition = "2021"

[lib]
name = "_accelerate"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["abi3-py310", "extension-module"] }
rayon = "1.11"
byteorder = "1.5"
numpy = "0.27"
memmap2 = "0.9"
ndarray = "0.17"
