[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "qiskit-addon-dice-solver"
version = "0.3.0"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pyscf",
    "qiskit-addon-sqd>=0.8",
]

[project.optional-dependencies]
dev = [
    "qiskit-addon-dice-solver[lint,docs]",
    "tox>=4.4.3",
]
style = [
    "ruff==0.12.11",
]
lint = [
    "qiskit-addon-dice-solver[style]",
    "mypy==1.19.1",
    "pylint==4.0.4",
    "reno>=4.1",
    "toml>=0.9.6",
]
docs = [
    "qiskit-sphinx-theme~=2.0.0",
    "jupyter-sphinx",
    "sphinx-design",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx_reredirects",
    "nbsphinx>=0.9.4",
    "reno>=4.1",
]

[tool.maturin]
bindings = "pyo3"
features = []
profile = "release"
module-name = "qiskit_addon_dice_solver._accelerate"

include = [
  { path = "qiskit_addon_dice_solver/bin/Dice", format = "wheel" },
  { path = "qiskit_addon_dice_solver/bin/*.so*", format = "wheel" },
]

[tool.mypy]
python_version = "3.10"
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["qiskit_addon_sqd", "test"]
target-version = "py39"

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle
    "W",   # pycodestyle
    "D",   # pydocstyle
    "F",   # pyflakes
    "RUF", # ruff
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
]
ignore = [
    "E501", # line too long
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.extend-per-file-ignores]
"test/**.py" = [
    "D",  # pydocstyle
]
"docs/**/*" = [
    "E402", # module level import not at top of file
    "D",    # pydocstyle
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = """
# This code is a Qiskit project.
#
# \\(C\\) Copyright IBM 2024\\.
#
# This code is licensed under the Apache License, Version 2\\.0\\. You may
# obtain a copy of this license in the LICENSE\\.txt file in the root directory
# of this source tree or at http\\:\\/\\/www\\.apache\\.org\\/licenses\\/LICENSE\\-2\\.0\\.
#
# Any modifications or derivative works of this code must retain this
# copyright notice, and modified files need to carry a notice indicating
# that they have been altered from the originals\\.
"""

[tool.ruff.lint.pydocstyle]
convention = "google"
